Usar 'lanzar' para 'raise'

--- a/c-api/abstract.po
+++ b/c-api/abstract.po
@@ -33,7 +33,7 @@ msgstr ""
 "Las funciones de este capítulo interactúan con los objetos de Python "
 "independientemente de su tipo, o con amplias clases de tipos de objetos (por "
 "ejemplo, todos los tipos numéricos o todos los tipos de secuencia). Cuando "
-"se usan en tipos de objetos para los que no se aplican, generarán una "
+"se usan en tipos de objetos para los que no se aplican, lanzarán una "
 "excepción de Python."
 
 #: ../Doc/c-api/abstract.rst:14
