--- a/c-api/bytes.po
+++ b/c-api/bytes.po
@@ -346,7 +346,7 @@ msgid ""
 "raised."
 msgstr ""
 "Si *length* es ``NULL``, el objeto bytes no puede contener bytes nulos "
-"incrustados; si lo hace, la función retorna ``-1`` y se genera un :exc:"
+"incrustados; si lo hace, la función retorna ``-1`` y se lanza un :exc:"
 "`ValueError`."
 
 #: ../Doc/c-api/bytes.rst:166
