--- a/c-api/call.po
+++ b/c-api/call.po
@@ -518,7 +518,7 @@ msgid ""
 "Return the result of the call on success, or raise an exception and return "
 "*NULL* on failure."
 msgstr ""
-"Retorna el resultado de la llamada en caso de éxito o genera una excepción y "
+"Retorna el resultado de la llamada en caso de éxito o lanza una excepción y "
 "retorna *NULL* en caso de error."
 
 #: ../Doc/c-api/call.rst:236
