--- a/c-api/codec.po
+++ b/c-api/codec.po
@@ -181,7 +181,7 @@ msgstr ""
 "`UnicodeTranslateError` que contiene información sobre la secuencia "
 "problemática de caracteres o bytes y su desplazamiento en la cadena original "
 "(consulte :ref:`unicodeexceptions` para funciones para extraer esta "
-"información). La devolución de llamada debe generar la excepción dada o "
+"información). La devolución de llamada debe lanzar la excepción dada o "
 "retornar una tupla de dos elementos que contiene el reemplazo de la "
 "secuencia problemática, y un número entero que proporciona el desplazamiento "
 "en la cadena original en la que se debe reanudar la codificación / "
