--- a/c-api/exceptions.po
+++ b/c-api/exceptions.po
@@ -272,10 +272,10 @@ msgid ""
 "returns ``NULL``, so a wrapper function around a system call can write "
 "``return PyErr_SetFromErrno(type);`` when the system call returns an error."
 msgstr ""
-"Esta es una función conveniente para generar una excepción cuando una "
-"función de biblioteca C ha retornado un error y establece la variable C :c:"
-"data:`errno`. Construye un objeto tupla cuyo primer elemento es el valor "
-"entero :c:data:`errno` y cuyo segundo elemento es el mensaje de error "
+"Esta es una función conveniente para lanzar una excepción cuando una función "
+"de biblioteca C ha retornado un error y establece la variable C :c:data:"
+"`errno`. Construye un objeto tupla cuyo primer elemento es el valor entero :"
+"c:data:`errno` y cuyo segundo elemento es el mensaje de error "
 "correspondiente (obtenido de :c:func:`strerror`), y luego llama a "
 "``PyErr_SetObject(type , objeto)``. En Unix, cuando el valor :c:data:`errno` "
 "es :const:`EINTR`, que indica una llamada interrumpida del sistema, esto "
@@ -304,7 +304,7 @@ msgid ""
 "filenames fails."
 msgstr ""
 "Similar a :c:func:`PyErr_SetFromErrnoWithFilenameObject`, pero toma un "
-"segundo objeto de nombre de archivo, para generar errores cuando falla una "
+"segundo objeto de nombre de archivo, para lanzar errores cuando falla una "
 "función que toma dos nombres de archivo."
 
 #: ../Doc/c-api/exceptions.rst:184
@@ -351,7 +351,7 @@ msgid ""
 "specifying the exception type to be raised."
 msgstr ""
 "Similar a :c:func:`PyErr_SetFromWindowsErr`, con un parámetro adicional que "
-"especifica el tipo de excepción que se generará."
+"especifica el tipo de excepción que se lanzará."
 
 #: ../Doc/c-api/exceptions.rst:213
 msgid ""
@@ -370,7 +370,7 @@ msgid ""
 "additional parameter specifying the exception type to be raised."
 msgstr ""
 "Similar a :c:func:`PyErr_SetFromWindowsErrWithFilenameObject`, con un "
-"parámetro adicional que especifica el tipo de excepción que se generará."
+"parámetro adicional que especifica el tipo de excepción que se lanzará."
 
 #: ../Doc/c-api/exceptions.rst:230
 msgid ""
@@ -386,7 +386,7 @@ msgid ""
 "parameter specifying the exception type to be raised."
 msgstr ""
 "Similar a :c:func:`PyErr_SetFromWindowsErrWithFilename`, con un parámetro "
-"adicional que especifica el tipo de excepción que se generará."
+"adicional que especifica el tipo de excepción que se lanzará."
 
 #: ../Doc/c-api/exceptions.rst:248
 msgid ""
@@ -462,10 +462,10 @@ msgstr ""
 "funciones similares exportadas por el módulo Python :mod:`warnings`. "
 "Normalmente imprimen un mensaje de advertencia a *sys.stderr*; sin embargo, "
 "también es posible que el usuario haya especificado que las advertencias se "
-"conviertan en errores, y en ese caso generarán una excepción. También es "
+"conviertan en errores, y en ese caso lanzarán una excepción. También es "
 "posible que las funciones generen una excepción debido a un problema con la "
-"maquinaria de advertencia. El valor de retorno es ``0`` si no se genera una "
-"excepción, o ``-1`` si se genera una excepción. (No es posible determinar si "
+"maquinaria de advertencia. El valor de retorno es ``0`` si no se lanza una "
+"excepción, o ``-1`` si se lanza una excepción. (No es posible determinar si "
 "realmente se imprime un mensaje de advertencia, ni cuál es el motivo de la "
 "excepción; esto es intencional). Si se produce una excepción, la persona que "
 "llama debe hacer su manejo normal de excepciones (por ejemplo, referencias "
@@ -786,7 +786,7 @@ msgid ""
 "`PyErr_CheckSignals()` invocation)."
 msgstr ""
 "La función intenta manejar todas las señales pendientes y luego devuelve "
-"``0``. Sin embargo, si un manejador de señales de Python genera una "
+"``0``. Sin embargo, si un manejador de señales de Python lanza una "
 "excepción, el indicador de error se establece y la función devuelve ``-1`` "
 "inmediatamente (de modo que es posible que otras señales pendientes no se "
 "hayan manejado todavía: estarán en la siguiente invocación de :c:func:"
@@ -815,7 +815,7 @@ msgid ""
 "`KeyboardInterrupt` exception."
 msgstr ""
 "El controlador de señales de Python predeterminado para  :const:`SIGINT` "
-"genera la excepción :exc:`KeyboardInterrupt`."
+"lanza la excepción :exc:`KeyboardInterrupt`."
 
 #: ../Doc/c-api/exceptions.rst:539
 msgid ""
