--- a/c-api/iter.po
+++ b/c-api/iter.po
@@ -96,5 +96,5 @@ msgid ""
 "``PYGEN_ERROR`` if iterator has raised and exception. *presult* is set to "
 "``NULL``."
 msgstr ""
-"``PYGEN_ERROR`` si el iterador ha generado una excepción. *presult* se "
+"``PYGEN_ERROR`` si el iterador ha lanzado una excepción. *presult* se "
 "establece en ``NULL``."
