--- a/c-api/long.po
+++ b/c-api/long.po
@@ -436,7 +436,7 @@ msgid ""
 "c:func:`PyLong_FromVoidPtr`."
 msgstr ""
 "Convierte un entero Python *pylong* en un puntero C :c:type:`void`. Si "
-"*pylong* no se puede convertir, se generará un :exc:`OverflowError`. Esto "
+"*pylong* no se puede convertir, se lanzará un :exc:`OverflowError`. Esto "
 "solo se garantiza para producir un puntero utilizable :c:type:`void` para "
 "valores creados con :c:func:`PyLong_FromVoidPtr`."
 
