--- a/c-api/module.po
+++ b/c-api/module.po
@@ -88,7 +88,7 @@ msgstr ""
 "Retorna el objeto del diccionario que implementa el espacio de nombres de "
 "*module*; este objeto es el mismo que el atributo :attr:`~object.__dict__` "
 "del objeto módulo. Si *module* no es un objeto módulo (o un subtipo de un "
-"objeto de módulo), :exc:`SystemError` se genera y se retorna ``NULL``."
+"objeto de módulo), se lanza :exc:`SystemError` y se retorna ``NULL``."
 
 #: ../Doc/c-api/module.rst:67
 msgid ""
