--- a/c-api/number.po
+++ b/c-api/number.po
@@ -370,7 +370,7 @@ msgid ""
 "`TypeError` exception raised on failure."
 msgstr ""
 "Retorna el *o* convertido aun entero de Python (*int*) en caso de éxito o "
-"``NULL`` con una excepción :exc:`TypeError` generada en caso de error."
+"``NULL`` con una excepción :exc:`TypeError` lanzada en caso de error."
 
 #: ../Doc/c-api/number.rst:259
 msgid ""
@@ -400,7 +400,7 @@ msgid ""
 "integer.  If the call fails, an exception is raised and ``-1`` is returned."
 msgstr ""
 "Retorna *o* convertido a un valor ``Py_ssize_t`` si *o* puede interpretarse "
-"como un entero. Si la llamada falla, se genera una excepción y se retorna "
+"como un entero. Si la llamada falla, se lanza una excepción y se retorna "
 "``-1``."
 
 #: ../Doc/c-api/number.rst:278
@@ -413,8 +413,8 @@ msgid ""
 "negative integer or ``PY_SSIZE_T_MAX`` for a positive integer."
 msgstr ""
 "Si *o* se puede convertir a un entero Python (*int*) pero el intento de "
-"convertir a un valor ``Py_ssize_t`` generaría un :exc:`OverflowError`, "
-"entonces el argumento *exc* es el tipo de excepción que se generará "
+"convertir a un valor ``Py_ssize_t`` lanzaría un :exc:`OverflowError`, "
+"entonces el argumento *exc* es el tipo de excepción que se lanzará "
 "(generalmente :exc:`IndexError` o :exc:`OverflowError`). Si *exc* es "
 "``NULL``, la excepción se borra y el valor se recorta a ``PY_SSIZE_T_MIN`` "
 "para un entero negativo o ``PY_SSIZE_T_MAX`` para un entero positivo."
