--- a/c-api/sys.po
+++ b/c-api/sys.po
@@ -632,8 +632,8 @@ msgid ""
 "and the exception is cleared. As a result, callers cannot assume that their "
 "hook has been added unless they control all existing hooks."
 msgstr ""
-"Si el intérprete se inicializa, esta función genera un evento de auditoría "
-"``sys.addaudithook`` sin argumentos. Si algún enlace existente genera una "
+"Si el intérprete se inicializa, esta función lanza un evento de auditoría "
+"``sys.addaudithook`` sin argumentos. Si algún enlace existente lanza una "
 "excepción derivada de :class:`Exception`, el nuevo gancho no se agregará y "
 "la excepción se borrará. Como resultado, las personas que llaman no pueden "
 "asumir que su gancho ha sido agregado a menos que controlen todos los "
