--- a/c-api/veryhigh.po
+++ b/c-api/veryhigh.po
@@ -516,8 +516,8 @@ msgstr ""
 "objeto de código asociado con el marco de ejecución del marco *f* se "
 "ejecuta, interpretando el código de bytes y ejecutando llamadas según sea "
 "necesario. El parámetro adicional *throwflag* se puede ignorar por lo "
-"general; si es verdadero, entonces se genera una excepción de inmediato; "
-"esto se usa para los métodos :meth:`~generator.throw` de objetos generadores."
+"general; si es verdadero, entonces se lanza una excepción de inmediato; esto "
+"se usa para los métodos :meth:`~generator.throw` de objetos generadores."
 
 #: ../Doc/c-api/veryhigh.rst:308
 msgid ""
