--- a/howto/clinic.po
+++ b/howto/clinic.po
@@ -2662,7 +2662,7 @@ msgstr ""
 "Aunque las funciones ``__new__ `` y ``__init__`` siempre deben aceptar tanto "
 "los objetos ``args`` como los ``kwargs``, al realizar la conversión puede "
 "especificar cualquier firma para estas funciones que desee. (Si su función "
-"no admite palabras clave, la función de análisis generada generará una "
+"no admite palabras clave, la función de análisis generada lanzará una "
 "excepción si recibe alguna)."
 
 #: ../Doc/howto/clinic.rst:1421
