--- a/howto/logging-cookbook.po
+++ b/howto/logging-cookbook.po
@@ -2279,7 +2279,7 @@ msgid ""
 "file multiple times. This could be done accidentally, for example by:"
 msgstr ""
 "En Windows, por lo general, no podrá abrir el mismo archivo varias veces, ya "
-"que esto generará un error de \"otro proceso está usando el archivo\". Sin "
+"que esto lanzará un error de \"otro proceso está usando el archivo\". Sin "
 "embargo, en las plataformas POSIX no obtendrá ningún error si abre el mismo "
 "archivo varias veces. Esto podría hacerse accidentalmente, por ejemplo:"
 
