--- a/howto/pyporting.po
+++ b/howto/pyporting.po
@@ -923,7 +923,7 @@ msgstr ""
 "3.5). De forma predeterminada, las comparaciones de tipos diferentes "
 "simplemente retornan ``False``, pero si cometió un error en la separación "
 "del control de datos de texto/binario o la indexación en bytes, no "
-"encontraría fácilmente el error. Esta marca generará una excepción cuando se "
+"encontraría fácilmente el error. Esta marca lanzará una excepción cuando se "
 "produzcan este tipo de comparaciones, lo que hace que el error sea mucho más "
 "fácil de rastrear."
 
