--- a/howto/urllib2.po
+++ b/howto/urllib2.po
@@ -378,7 +378,7 @@ msgstr ""
 "respuestas automáticamente (por ejemplo, si la respuesta es una \"redirección"
 "\" que solicita que el cliente obtenga el documento desde una URL diferente, "
 "urllib se encargará de eso por ti). Para aquellas respuestas que no puede "
-"manejar, urlopen generará un :exc:`HTTPError`. Los errores típicos incluyen "
+"manejar, urlopen lanzará un :exc:`HTTPError`. Los errores típicos incluyen "
 "'404' (página no encontrada), '403' (petición prohibida), y "
 "'401' (autenticación requerida)."
 
