--- a/reference/compound_stmts.po
+++ b/reference/compound_stmts.po
@@ -212,8 +212,8 @@ msgstr ""
 "asigna a la lista utilizando las reglas estándar para las asignaciones (ver :"
 "ref:`assignment`), y luego se ejecuta la suite. Cuando los elementos están "
 "agotados (que es inmediatamente cuando la secuencia está vacía o un iterador "
-"genera una excepción del tipo :exc:`StopIteration`), la suite en la "
-"cláusula :keyword:`!else`, si está presente, se ejecuta y el bucle termina."
+"lanza una excepción del tipo :exc:`StopIteration`), la suite en la cláusula :"
+"keyword:`!else`, si está presente, se ejecuta y el bucle termina."
 
 #: ../Doc/reference/compound_stmts.rst:173
 msgid ""
@@ -339,10 +339,10 @@ msgid ""
 "exception)."
 msgstr ""
 "Si la evaluación de una expresión en el encabezado de una cláusula "
-"``except`` genera una excepción, la búsqueda original de un gestor se "
-"cancela y se inicia la búsqueda de la nueva excepción en el código "
-"circundante y en la pila de llamadas (se trata como si toda la sentencia :"
-"keyword:`try` provocó la excepción)."
+"``except`` lanza una excepción, la búsqueda original de un gestor se cancela "
+"y se inicia la búsqueda de la nueva excepción en el código circundante y en "
+"la pila de llamadas (se trata como si toda la sentencia :keyword:`try` "
+"provocó la excepción)."
 
 #: ../Doc/reference/compound_stmts.rst:271
 msgid ""
@@ -442,8 +442,8 @@ msgstr ""
 "keyword:`except` y :keyword:`!else`. Si se produce una excepción en "
 "cualquiera de las cláusulas y no se maneja, la excepción se guarda "
 "temporalmente. Se ejecuta la cláusula :keyword:`!finally`. Si hay una "
-"excepción guardada, se vuelve a generar al final de la cláusula :keyword:`!"
-"finally`. Si la cláusula :keyword:`!finally` genera otra excepción, la "
+"excepción guardada, se vuelve a lanzar al final de la cláusula :keyword:`!"
+"finally`. Si la cláusula :keyword:`!finally` lanza otra excepción, la "
 "excepción guardada se establece como el contexto de la nueva excepción. Si "
 "la cláusula :keyword:`!finally` ejecuta una sentencia :keyword:`return`, :"
 "keyword:`break` o :keyword:`continue`, la excepción guardada se descarta::"
@@ -488,7 +488,7 @@ msgid ""
 msgstr ""
 "Se puede encontrar información adicional sobre las excepciones en la "
 "sección :ref:`exceptions`, e información sobre el uso de la sentencia :"
-"keyword:`raise`, para generar excepciones se puede encontrar en la sección :"
+"keyword:`raise`, para lanzar excepciones se puede encontrar en la sección :"
 "ref:`raise`."
 
 #: ../Doc/reference/compound_stmts.rst:391
@@ -877,7 +877,7 @@ msgid ""
 "If the ``guard`` raises an exception during evaluation, the exception "
 "bubbles up."
 msgstr ""
-"Si el ``guard`` genera una excepción durante la evaluación, se levanta la "
+"Si el ``guard`` lanza una excepción durante la evaluación, se levanta la "
 "excepción."
 
 #: ../Doc/reference/compound_stmts.rst:649
@@ -1439,9 +1439,8 @@ msgid ""
 "will raise a :exc:`ValueError` at runtime."
 msgstr ""
 "No se permiten claves duplicadas en patrones de mapeo. Las claves literales "
-"duplicadas generarán un :exc:`SyntaxError`. Dos claves que de otro modo "
-"tendrían el mismo valor generarán un :exc:`ValueError` en tiempo de "
-"ejecución."
+"duplicadas lanzarán un :exc:`SyntaxError`. Dos claves que de otro modo "
+"tendrían el mismo valor lanzarán un :exc:`ValueError` en tiempo de ejecución."
 
 #: ../Doc/reference/compound_stmts.rst:975
 msgid ""
@@ -1474,7 +1473,7 @@ msgid ""
 "values; or a :exc:`ValueError` for named keys of the same value."
 msgstr ""
 "Si se detectan claves duplicadas en el patrón de mapeo, el patrón se "
-"considera inválido. Se genera un :exc:`SyntaxError` para valores literales "
+"considera inválido. Se lanza un :exc:`SyntaxError` para valores literales "
 "duplicados; o un :exc:`ValueError` para claves con nombre del mismo valor."
 
 #: ../Doc/reference/compound_stmts.rst:988
@@ -1591,12 +1590,12 @@ msgid ""
 "If this raises an exception other than :exc:`AttributeError`, the exception "
 "bubbles up."
 msgstr ""
-"Si esto genera una excepción distinta de :exc:`AttributeError`, la excepción "
+"Si esto lanza una excepción distinta de :exc:`AttributeError`, la excepción "
 "aparece."
 
 #: ../Doc/reference/compound_stmts.rst:1045
 msgid "If this raises :exc:`AttributeError`, the class pattern has failed."
-msgstr "Si esto genera :exc:`AttributeError`, el patrón de clase ha fallado."
+msgstr "Si esto lanza :exc:`AttributeError`, el patrón de clase ha fallado."
 
 #: ../Doc/reference/compound_stmts.rst:1047
 msgid ""
@@ -1633,14 +1632,14 @@ msgstr ""
 
 #: ../Doc/reference/compound_stmts.rst:1060
 msgid "If this raises an exception, the exception bubbles up."
-msgstr "Si esto genera una excepción, la excepción surge."
+msgstr "Si esto lanza una excepción, la excepción surge."
 
 #: ../Doc/reference/compound_stmts.rst:1062
 msgid ""
 "If the returned value is not a tuple, the conversion fails and :exc:"
 "`TypeError` is raised."
 msgstr ""
-"Si el valor retornado no es una tupla, la conversión falla y se genera :exc:"
+"Si el valor retornado no es una tupla, la conversión falla y se lanza :exc:"
 "`TypeError`."
 
 #: ../Doc/reference/compound_stmts.rst:1065
@@ -1648,7 +1647,7 @@ msgid ""
 "If there are more positional patterns than ``len(cls.__match_args__)``, :exc:"
 "`TypeError` is raised."
 msgstr ""
-"Si hay más patrones posicionales que ``len(cls.__match_args__)``, se genera :"
+"Si hay más patrones posicionales que ``len(cls.__match_args__)``, se lanza :"
 "exc:`TypeError`."
 
 #: ../Doc/reference/compound_stmts.rst:1068
@@ -1659,11 +1658,11 @@ msgid ""
 msgstr ""
 "De lo contrario, el patrón posicional ``i`` se convierte en un patrón de "
 "palabra clave utilizando ``__match_args__[i]`` como palabra clave. "
-"``__match_args__[i]`` debe ser una cadena; si no, se genera :exc:`TypeError`."
+"``__match_args__[i]`` debe ser una cadena; si no, se lanza :exc:`TypeError`."
 
 #: ../Doc/reference/compound_stmts.rst:1072
 msgid "If there are duplicate keywords, :exc:`TypeError` is raised."
-msgstr "Si hay palabras clave duplicadas, se genera :exc:`TypeError`."
+msgstr "Si hay palabras clave duplicadas, se lanza :exc:`TypeError`."
 
 #: ../Doc/reference/compound_stmts.rst:1074
 msgid ":ref:`class-pattern-matching`"
