--- a/reference/datamodel.po
+++ b/reference/datamodel.po
@@ -4633,7 +4633,7 @@ msgstr ""
 ":term:`Objetos Coroutine <coroutine>` son objetos :term:`awaitable`. La "
 "ejecución de una corrutina puede ser controlada llamando :meth:`__await__` e "
 "iterando sobre el resultado. Cuando la corrutina ha terminado de ejecutar y "
-"retorna, el iterados levanta una excepción :exc:`StopIteration`, y el "
+"retorna, el iterados lanza una excepción :exc:`StopIteration`, y el "
 "atributo :attr:`~StopIteration.value` de dicha excepción mantiene el valor "
 "de retorno. Si la corrutina lanza una excepción, ésta es propagada por el "
 "iterador. Las corrutinas no deben lanzar directamente excepciones :exc:"
