--- a/reference/expressions.po
+++ b/reference/expressions.po
@@ -736,9 +736,9 @@ msgstr ""
 "directamente al llamador de los métodos del generador actual. Cualquier "
 "valor pasado con :meth:`~generator.send` y cualquier excepción pasada con :"
 "meth:`~generator.throw` se pasan al iterador subyacente si tiene los métodos "
-"apropiados. Si este no es el caso, entonces :meth:`~generator.send` "
-"generará :exc:`AttributeError` o :exc:`TypeError`, mientras que :meth:"
-"`~generator.throw` solo generará la excepción pasada inmediatamente."
+"apropiados. Si este no es el caso, entonces :meth:`~generator.send` lanzará :"
+"exc:`AttributeError` o :exc:`TypeError`, mientras que :meth:`~generator."
+"throw` solo lanzará la excepción pasada inmediatamente."
 
 #: ../Doc/reference/expressions.rst:490
 msgid ""
@@ -1013,7 +1013,7 @@ msgid ""
 msgstr ""
 "Si un generador asincrónico sale temprano por :keyword:`break`, la tarea de "
 "la persona que llama se cancela u otras excepciones, el código de limpieza "
-"asíncrono del generador se ejecutará y posiblemente generará excepciones o "
+"asíncrono del generador se ejecutará y posiblemente lanzará excepciones o "
 "accederá a variables de contexto en un contexto inesperado, tal vez después "
 "de la vida útil de las tareas de las que depende, o durante el cierre del "
 "ciclo de eventos cuando se llama al gancho de recolección de basura del "
@@ -1182,10 +1182,10 @@ msgstr ""
 "Retorna un esperable que cuando corre lanza un :exc:`GeneratorExit` a la "
 "función generadora asincrónica en el punto donde fue pausada. Si la función "
 "generadora asincrónica termina exitosamente, ya está cerrada o genera  :exc:"
-"`GeneratorExit` (sin cazar la excepción), el esperable retornado generará "
-"una excepción :exc:`StopIteration`. Otros esperables retornados por "
-"subsecuentes invocaciones al generador asincrónico generarán una excepción :"
-"exc:`StopAsyncIteration`. Si el generador asincrónico produce un valor, el "
+"`GeneratorExit` (sin cazar la excepción), el esperable retornado lanzará una "
+"excepción :exc:`StopIteration`. Otros esperables retornados por subsecuentes "
+"invocaciones al generador asincrónico lanzarán una excepción :exc:"
+"`StopAsyncIteration`. Si el generador asincrónico produce un valor, el "
 "esperable genera un :exc:`RuntimeError`. Si el generador asincrónico genera "
 "cualquier otra excepción, esta es propagada al invocador del esperable. Si "
 "el generador asincrónico ha terminado debido a una excepción o una "
