--- a/tutorial/classes.po
+++ b/tutorial/classes.po
@@ -697,7 +697,7 @@ msgstr ""
 "¿Qué sucede exactamente cuando un método es llamado?  Debés haber notado que "
 "``x.f()`` fue llamado más arriba sin ningún argumento, a pesar de que la "
 "definición de función de :meth:`f` especificaba un argumento.  ¿Qué pasó con "
-"ese argumento?  Seguramente Python levanta una excepción cuando una función "
+"ese argumento?  Seguramente Python lanza una excepción cuando una función "
 "que requiere un argumento es llamada sin ninguno, aún si el argumento no es "
 "utilizado..."
 
@@ -1260,7 +1260,7 @@ msgstr ""
 "keyword:`for` llama a :func:`iter` en el objeto contenedor.  La función "
 "retorna un objeto iterador que define el método :meth:`__next__` que accede "
 "elementos en el contenedor de a uno por vez.  Cuando no hay más elementos, :"
-"meth:`~iterator.__next__` levanta una excepción :exc:`StopIteration` que le "
+"meth:`~iterator.__next__` lanza una excepción :exc:`StopIteration` que le "
 "avisa al bucle del :keyword:`!for` que hay que terminar.  Podés llamar al "
 "método :meth:`~iterator.__next__` usando la función integrada :func:`next`; "
 "este ejemplo muestra como funciona todo esto::"
@@ -1329,7 +1329,7 @@ msgid ""
 "effort than writing a regular function."
 msgstr ""
 "Además de la creación automática de métodos y el guardar el estado del "
-"programa, cuando los generadores terminan automáticamente levantan :exc:"
+"programa, cuando los generadores terminan automáticamente lanzan :exc:"
 "`StopIteration`.  Combinadas, estas características facilitan la creación de "
 "iteradores, y hacen que no sea más esfuerzo que escribir una función regular."
 
