--- a/tutorial/datastructures.po
+++ b/tutorial/datastructures.po
@@ -818,8 +818,8 @@ msgstr ""
 "siempre y cuando los objetas tenga los métodos de comparación apropiados.  "
 "Por ejemplo, los tipos de números mezclados son comparados de acuerdo a su "
 "valor numérico, o sea 0 es igual a 0.0, etc.  Si no es el caso, en lugar de "
-"proveer un ordenamiento arbitrario, el intérprete generará una excepción :"
-"exc:`TypeError`."
+"proveer un ordenamiento arbitrario, el intérprete lanzará una excepción :exc:"
+"`TypeError`."
 
 #: ../Doc/tutorial/datastructures.rst:731
 msgid "Footnotes"
@@ -832,15 +832,3 @@ msgid ""
 msgstr ""
 "Otros lenguajes podrían retornar un objeto mutado, que permite "
 "encadenamiento de métodos como ``d->insert(\"a\")->remove(\"b\")->sort();``."
-
-#~ msgid ""
-#~ "Note that in Python, unlike C, assignment cannot occur inside "
-#~ "expressions. C programmers may grumble about this, but it avoids a common "
-#~ "class of problems encountered in C programs: typing ``=`` in an "
-#~ "expression when ``==`` was intended."
-#~ msgstr ""
-#~ "Notá que en Python, a diferencia de C, la asignación no puede ocurrir "
-#~ "dentro de expresiones.  Los programadores de C pueden renegar por esto, "
-#~ "pero es algo que evita un tipo de problema común encontrado en programas "
-#~ "en C: escribir ``=`` en una expresión cuando lo que se quiere escribir es "
-#~ "``==``."
