--- a/whatsnew/2.3.po
+++ b/whatsnew/2.3.po
@@ -2389,7 +2389,7 @@ msgstr ""
 "El módulo :mod:`socket` ahora admite tiempos de espera. Puede llamar al "
 "método ``settimeout(t)`` en un objeto de socket para establecer un tiempo de "
 "espera de *t* seconds. Subsequent socket operations that take longer than "
-"*t* segundos para completar, abortará y generará una excepción :exc:`socket."
+"*t* segundos para completar, abortará y lanzará una excepción :exc:`socket."
 "timeout`."
 
 #: ../Doc/whatsnew/2.3.rst:1468
@@ -2560,7 +2560,7 @@ msgstr ""
 "interfaces Tcl, :mod:`Tkinter` ahora evitará esto automáticamente cuando se "
 "acceda a un widget desde un subproceso diferente al ordenar un comando, "
 "pasarlo al subproceso correcto y esperar los resultados. Otras interfaces no "
-"se pueden manejar automáticamente, pero :mod:`Tkinter` ahora generará una "
+"se pueden manejar automáticamente, pero :mod:`Tkinter` ahora lanzará una "
 "excepción en dicho acceso para que al menos pueda averiguar sobre el "
 "problema. Consulte https://mail.python.org/pipermail/python-dev/2002-"
 "December/031107.html para obtener una explicación más detallada de este "
@@ -3220,7 +3220,7 @@ msgstr ""
 "vínculos débiles para mejorar la compatibilidad con versiones anteriores. "
 "Esto significa que los módulos ya no dejarán de cargarse si falta una rutina "
 "en la versión actual del sistema operativo. En su lugar, llamar a la rutina "
-"que falta generará una excepción. (Contribuido por Jack Jansen.)"
+"que falta lanzará una excepción. (Contribuido por Jack Jansen.)"
 
 #: ../Doc/whatsnew/2.3.rst:1954
 msgid ""
