--- a/whatsnew/2.4.po
+++ b/whatsnew/2.4.po
@@ -1732,7 +1732,7 @@ msgid ""
 msgstr ""
 "Las clases de :mod:`ConfigParser` se han mejorado ligeramente. El método :"
 "meth:`read` ahora devuelve una lista de los archivos que se analizaron "
-"correctamente y el método :meth:`set` genera :exc:`TypeError` si se pasa un "
+"correctamente y el método :meth:`set` lanza :exc:`TypeError` si se pasa un "
 "argumento *value* que no es una cadena. (Contribuido por John Belmonte y "
 "David Goodger.)"
 
@@ -2124,7 +2124,7 @@ msgstr ""
 "estricta en los parámetros de la función :func:`signal.signal`. Por ejemplo, "
 "no puede establecer un controlador en la señal :const:`SIGKILL`; las "
 "versiones anteriores de Python aceptarían silenciosamente esto, pero 2.4 "
-"generará una excepción :exc:`RuntimeError`."
+"lanzará una excepción :exc:`RuntimeError`."
 
 #: ../Doc/whatsnew/2.4.rst:1274
 msgid ""
@@ -2532,7 +2532,7 @@ msgstr ""
 "Ya no puede comparar las instancias :class:`date` y :class:`~datetime."
 "datetime` proporcionadas por el módulo :mod:`datetime`. Dos instancias de "
 "clases diferentes ahora siempre serán desiguales, y las comparaciones "
-"relativas (``<``, ``>``) generarán un :exc:`TypeError`."
+"relativas (``<``, ``>``) lanzarán un :exc:`TypeError`."
 
 #: ../Doc/whatsnew/2.4.rst:1531
 msgid ""
