--- a/whatsnew/3.3.po
+++ b/whatsnew/3.3.po
@@ -4798,7 +4798,7 @@ msgid ""
 "or :c:func:`localtime` failed."
 msgstr ""
 ":issue:`13847`, :issue:`14180`: :mod:`time` y :mod:`datetime`: :exc:"
-"`OverflowError` ahora se eleva en lugar de :exc:`ValueError` si una marca de "
+"`OverflowError` ahora se lanza en lugar de :exc:`ValueError` si una marca de "
 "tiempo está fuera de rango. :exc:`OSError` ahora se genera si fallaron las "
 "funciones C :c:func:`gmtime` o :c:func:`localtime`."
 
