--- a/whatsnew/3.4.po
+++ b/whatsnew/3.4.po
@@ -3266,7 +3266,7 @@ msgid ""
 "the module level in the test file), it is now reported as a skip instead of "
 "an error.  (Contributed by Zach Ware in :issue:`16935`.)"
 msgstr ""
-"Si :class:`~unittest.SkipTest` se levanta durante el descubrimiento de la "
+"Si :class:`~unittest.SkipTest` se lanza durante el descubrimiento de la "
 "prueba (es decir, en el nivel de módulo en el archivo de prueba), ahora se "
 "reporta como un salto en lugar de un error.  (Contribuido por Zach Ware en :"
 "issue:`16935`.)"
