--- a/whatsnew/3.5.po
+++ b/whatsnew/3.5.po
@@ -3999,7 +3999,7 @@ msgid ""
 "handling inside generators <whatsnew-pep-479>` for details."
 msgstr ""
 "Al lanzar la excepción :exc:`StopIteration` dentro de un generador ahora se "
-"generará un :exc:`PendingDeprecationWarning` silencioso, el cual se "
+"lanzará un :exc:`PendingDeprecationWarning` silencioso, el cual se "
 "convertirá en una advertencia de deprecación no silenciosa en Python 3.6 y "
 "activará un :exc:`RuntimeError` en Python 3.7. Consultar :ref:`PEP 479: "
 "Cambiar el gestor de StopIteration dentro de generadores <whatsnew-pep-479>` "
