--- a/whatsnew/3.7.po
+++ b/whatsnew/3.7.po
@@ -1744,9 +1744,9 @@ msgid ""
 "Furman in :issue:`33217`.)"
 msgstr ""
 "En Python 3.8, intentar buscar objetos que no sean Enum en :class:`Enum` "
-"generará un :exc:`TypeError` (por ejemplo, ``1 in Color``); de manera "
+"lanzará un :exc:`TypeError` (por ejemplo, ``1 in Color``); de manera "
 "similar, si se intenta buscar objetos que no sean Flag en un miembro :class:"
-"`Flag` se generará :exc:`TypeError` (por ejemplo, ``1 in Perm.RW``); "
+"`Flag` se lanzará :exc:`TypeError` (por ejemplo, ``1 in Perm.RW``); "
 "actualmente, ambas operaciones devuelven :const:`False` en su lugar y están "
 "obsoletas."
 
@@ -3969,9 +3969,9 @@ msgid ""
 "`33217`.)"
 msgstr ""
 "En Python 3.8, intentar buscar objetos que no sean Enum en clases :class:"
-"`Enum` generará un :exc:`TypeError` (por ejemplo, ``1 in Color``); de manera "
+"`Enum` lanzará un :exc:`TypeError` (por ejemplo, ``1 in Color``); de manera "
 "similar, si se intenta buscar objetos que no sean miembro de la :class:"
-"`Flag` se generará :exc:`TypeError` (por ejemplo, ``1 in Perm.RW``); "
+"`Flag` se lanzará :exc:`TypeError` (por ejemplo, ``1 in Perm.RW``); "
 "actualmente, ambas operaciones devuelven :const:`False` en su lugar."
 
 #: ../Doc/whatsnew/3.7.rst:1996
@@ -4057,7 +4057,7 @@ msgid ""
 msgstr ""
 "El truncamiento del valor del argumento silencioso en :func:`socket.htons` "
 "y :func:`socket.ntohs` ha quedado en desuso. En futuras versiones de Python, "
-"si el argumento pasado es mayor de 16 bits, se generará una excepción. "
+"si el argumento pasado es mayor de 16 bits, se lanzará una excepción. "
 "(Contribuido por *Oren Milman* en :issue:`28332`.)"
 
 #: ../Doc/whatsnew/3.7.rst:2056
@@ -4419,7 +4419,7 @@ msgid ""
 "(Contributed by Jelle Zijlstra in :issue:`30406`.)"
 msgstr ""
 ":keyword:`async` y :keyword:`await` los nombres ahora son palabras clave "
-"reservadas. El código que usa estos nombres como identificadores generará "
+"reservadas. El código que usa estos nombres como identificadores lanzará "
 "ahora un :exc:`SyntaxError`. (Contribuido por *Jelle Zijlstra* en :issue:"
 "`30406`.)"
 
@@ -4459,7 +4459,7 @@ msgid ""
 "can be omitted only on calls. (Contributed by Serhiy Storchaka in :issue:"
 "`32012` and :issue:`32023`.)"
 msgstr ""
-"Python 3.7 ahora levanta correctamente una :exc:`SyntaxError`, como una "
+"Python 3.7 ahora lanza correctamente una :exc:`SyntaxError`, como una "
 "expresión generadora siempre debe estar directamente dentro de un conjunto "
 "de paréntesis y no puede tener una coma a ambos lados, y la duplicación de "
 "los paréntesis solo se puede omitir en las llamadas. (Contribuido por "
@@ -4842,13 +4842,13 @@ msgid ""
 "date`. (Contributed by Alexander Belopolsky in :issue:`28292`.)"
 msgstr ""
 ":meth:`Calendar.itermonthdates <calendar.Calendar.itermonthdates>` ahora "
-"generará una excepción cuando una fecha cae fuera del rango de "
-"``0001-01-01`` a ``9999-12-31``. Para admitir aplicaciones que no pueden "
-"tolerar tales excepciones, se puede utilizar el nuevo :meth:`Calendar."
-"itermonthdays3 <calendar.Calendar.itermonthdays3>` y :meth:`Calendar."
-"itermonthdays4 <calendar.Calendar.itermonthdays4>`. Los nuevos métodos "
-"devuelven tuplas y no están restringidos por el rango admitido por :class:"
-"`datetime.date`. (Contribuido por *Alexander Belopolsky* en :issue:`28292`.)"
+"lanzará una excepción cuando una fecha cae fuera del rango de ``0001-01-01`` "
+"a ``9999-12-31``. Para admitir aplicaciones que no pueden tolerar tales "
+"excepciones, se puede utilizar el nuevo :meth:`Calendar.itermonthdays3 "
+"<calendar.Calendar.itermonthdays3>` y :meth:`Calendar.itermonthdays4 "
+"<calendar.Calendar.itermonthdays4>`. Los nuevos métodos devuelven tuplas y "
+"no están restringidos por el rango admitido por :class:`datetime.date`. "
+"(Contribuido por *Alexander Belopolsky* en :issue:`28292`.)"
 
 #: ../Doc/whatsnew/3.7.rst:2428
 msgid ""
