--- a/whatsnew/3.8.po
+++ b/whatsnew/3.8.po
@@ -2043,7 +2043,7 @@ msgstr ""
 "Se ha agregado la nueva función :func:`sys.unraisablehook` que se puede "
 "anular para controlar cómo se manejan las \"excepciones no lanzables\". Se "
 "llama cuando se ha producido una excepción, pero Python no tiene forma de "
-"manejarla. Por ejemplo, cuando un destructor genera una excepción o durante "
+"manejarla. Por ejemplo, cuando un destructor lanza una excepción o durante "
 "la recolección de basura (:func:`gc.collect`). (Contribución de Victor "
 "Stinner en :issue:`36829`.)"
 
@@ -3368,7 +3368,7 @@ msgstr ""
 ":class:`subprocess.Popen` ahora puede usar :func:`os.posix_spawn` en algunos "
 "casos para un mejor rendimiento. En el Subsistema de Windows para Linux y en "
 "la Emulación de usuario QEMU, el constructor :class:`Popen` que usa :func:"
-"`os.posix_spawn` ya no genera una excepción como \"missing program\" ante "
+"`os.posix_spawn` ya no lanza una excepción como \"missing program\" ante "
 "errores. En cambio, el proceso hijo falla con un valor :attr:`~Popen."
 "returncode` distinto de cero. (Contribución de Joannah Nanjekye y Victor "
 "Stinner en :issue:`35537`.)"
