--- a/whatsnew/changelog.po
+++ b/whatsnew/changelog.po
@@ -8726,7 +8726,7 @@ msgstr ""
 "`bpo-36452 <https://bugs.python.org/issue36452>`__: Cambiar las claves "
 "``dict`` durante la iteración del propio dictado, ``keys()``, ``values()`` o "
 "``items()`` ahora se detectarán en ciertos casos de esquina donde las claves "
-"se eliminan / agregan para que no se cambie el número de claves. Se generará "
+"se eliminan / agregan para que no se cambie el número de claves. Se lanzará "
 "un `RuntimeError` después de las iteraciones ``len(dict)``. Contribución de "
 "Thomas Perl."
 
@@ -11615,7 +11615,7 @@ msgid ""
 "are passed before ``**kwargs`` since Python 3.6."
 msgstr ""
 "`bpo-35634 <https://bugs.python.org/issue35634>`__: ``func(**kwargs)`` ahora "
-"generará un error cuando ``kwargs`` es un mapeo que contiene múltiples "
+"lanzará un error cuando ``kwargs`` es un mapeo que contiene múltiples "
 "entradas con la misma clave. Ya se generó un error cuando se pasan otros "
 "argumentos de palabras clave antes de ``**kwargs`` desde Python 3.6."
 
@@ -13792,7 +13792,7 @@ msgstr ""
 "cadena de formato daría como resultado una excepción. Sin embargo, esto solo "
 "ocurrió cuando se estaba utilizando el módulo C de fecha y hora; la "
 "implementación de Python no coincidió con este comportamiento. Datetime "
-"ahora es compatible con PEP-399 y no generará una excepción en un '%' final."
+"ahora es compatible con PEP-399 y no lanzará una excepción en un '%' final."
 
 #: ../build/NEWS:5092
 msgid ""
@@ -15578,7 +15578,7 @@ msgstr ""
 "devuelven un resultado booleano como :meth:`~pathlib.Path.exists()`, :meth:"
 "`~pathlib.Path.is_dir()`, :meth:`~pathlib.Path.is_file()`, :meth:`~pathlib."
 "Path.is_mount()`, :meth:`~pathlib.Path.is_block_device()`, :meth:`~pathlib."
-"Path.is_fifo()`, ahora devuelve ``False`` en lugar de elevar :exc:"
+"Path.is_fifo()`, ahora devuelve ``False`` en lugar de lanzar :exc:"
 "`ValueError` o sus subclases :exc:`UnicodeEncodeError` y :exc:"
 "`UnicodeDecodeError` para rutas que contienen caracteres o bytes no "
 "representables en el nivel del sistema operativo."
@@ -20342,7 +20342,7 @@ msgid ""
 msgstr ""
 "`bpo-33217 <https://bugs.python.org/issue33217>`__: Desactive la búsqueda de "
 "objetos que no sean Enum en las clases de Enum y los miembros de Enum "
-"(generará :exc:`TypeError` en 3.8+)."
+"(lanzará :exc:`TypeError` en 3.8+)."
 
 #: ../build/NEWS:7801
 msgid "Python 3.7.0 beta 3"
@@ -23030,7 +23030,7 @@ msgid ""
 "restricted by the range supported by datetime.date."
 msgstr ""
 "`bpo-28292 <https://bugs.python.org/issue28292>`__: Calendar.itermonthdates "
-"() ahora generará constantemente una excepción cuando una fecha esté fuera "
+"() ahora lanzará constantemente una excepción cuando una fecha esté fuera "
 "del rango de 0001-01-01 a 9999-12-31. Para admitir aplicaciones que no "
 "pueden tolerar tales excepciones, se agregan los nuevos métodos "
 "itermonthdays3 () e itermonthdays4 (). Los nuevos métodos devuelven tuplas y "
@@ -35366,7 +35366,7 @@ msgid ""
 "DeprecationWarning.  Patch by Anish Shah."
 msgstr ""
 "`bpo-26136 <https://bugs.python.org/issue26136>`__: Actualice la advertencia "
-"cuando un generador eleva StopIteration de PendingDeprecationWarning a "
+"cuando un generador lanza StopIteration de PendingDeprecationWarning a "
 "DeprecationWarning. Parche de Anish Shah."
 
 #: ../build/NEWS:16138
@@ -39296,7 +39296,7 @@ msgid ""
 msgstr ""
 "`bpo-26194 <https://bugs.python.org/issue26194>`__: Deque.insert () dio "
 "resultados extraños para deques acotados que habían alcanzado su tamaño "
-"máximo. Ahora se generará un IndexError al intentar insertarlo en una deque "
+"máximo. Ahora se lanzará un IndexError al intentar insertarlo en una deque "
 "completa."
 
 #: ../build/NEWS:18601
@@ -43527,7 +43527,7 @@ msgid ""
 msgstr ""
 "`bpo-22834 <https://bugs.python.org/issue22834>`__: Si el directorio de "
 "trabajo actual termina siendo configurado en un directorio inexistente, la "
-"importación ya no generará FileNotFoundError."
+"importación ya no lanzará FileNotFoundError."
 
 #: ../build/NEWS:21101
 msgid ""
