--- a/c-api/arg.po
+++ b/c-api/arg.po
@@ -857,8 +857,7 @@ msgstr ""
 "argumento :c:type:`void*` que se pasó a la función :c:func:`PyArg_Parse\\*`. "
 "El *status* retornado debe ser ``1`` para una conversión exitosa y ``0`` si "
 "la conversión ha fallado. Cuando la conversión falla, la función *converter* "
-"debería generar una excepción y dejar el contenido de *address* sin "
-"modificar."
+"debería lanzar una excepción y dejar el contenido de *address* sin modificar."
 
 #: ../Doc/c-api/arg.rst:343
 msgid ""
@@ -1052,7 +1051,7 @@ msgid ""
 msgstr ""
 "Analiza los parámetros de una función que solo toma parámetros posicionales "
 "en variables locales. Retorna verdadero en el éxito; en caso de fallo, "
-"retorna falso y genera la excepción apropiada."
+"retorna falso y lanza la excepción apropiada."
 
 #: ../Doc/c-api/arg.rst:430
 msgid ""
@@ -1075,7 +1074,7 @@ msgstr ""
 "terminado en ``NULL`` de nombres de parámetros de palabras clave. Los "
 "nombres vacíos denotan :ref:`parámetros solo posicionales <positional-"
 "only_parameter>`. Retorna verdadero cuando hay éxito; en caso de fallo, "
-"retorna falso y genera la excepción apropiada."
+"retorna falso y lanza la excepción apropiada."
 
 #: ../Doc/c-api/arg.rst:443
 msgid ""
@@ -1184,7 +1183,7 @@ msgid ""
 msgstr ""
 "Crea un nuevo valor basado en una cadena de formato similar a los aceptados "
 "por la familia de funciones :c:func:`PyArg_Parse\\*` y una secuencia de "
-"valores. Retorna el valor o ``NULL`` en caso de error; se generará una "
+"valores. Retorna el valor o ``NULL`` en caso de error; se lanzará una "
 "excepción si se retorna ``NULL``."
 
 #: ../Doc/c-api/arg.rst:525
